--- a/public_html_to_upload/endorsements.css
+++ b/public_html_to_upload/endorsements.css
@@ -59,3 +59,17 @@ ul {
     padding: 0;
     margin: 0;
 }
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
