--- a/public_html_to_upload/home.css
+++ b/public_html_to_upload/home.css
@@ -51,3 +51,17 @@ hr {
 ul {
     list-style-position: inside;
 }
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
