--- a/public_html_to_upload/home.css
+++ b/public_html_to_upload/home.css
@@ -10,7 +10,7 @@ html {
     width: 100%;
     height: 100%;
     font-family: "Lato";
-    color: white;
+    background-color: #bde0ee;
 
 }
 
@@ -19,22 +19,28 @@ h1 {
 	font-size: 5em;
 }
 
+.jumbotron {
+    color: #f1cf40;
+    background: #0e1f65;
+    text-align: center;
+}
+
 #main {
-    background-image: url("images/photo_logo.jpg");
-    background-size: cover;
+/*    background-image: url("images/photo_logo.jpg");
+    background-size: cover;*/
     width: 100%;
     height: 100%;
 }
 
 
 .content{
-	padding-top: 15%;
-	text-align: center;
+	/*padding-top: 15%;*/
+	text-align: left;
     margin: auto;
     width: 100%;
-    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+    /*text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
                  0px 8px 13px rgba(0,0,0,0.1),
-                 0px 18px 23px rgba(0,0,0,0.1);
+                 0px 18px 23px rgba(0,0,0,0.1);*/
 }
 
 hr {
