--- a/public_html_to_upload/css/home.css
+++ b/public_html_to_upload/css/home.css
@@ -49,8 +49,9 @@ hr {
     border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 
-#heart{
-    color: #800020;
+#icons{
+    color: black;
+    padding-right: 25px;
 }
 
 #upcoming_events{
